<?xml version='1.0' encoding='utf-8' ?>
<resources>
  <string name="active_classify">Sort by activity status</string>
  <string name="app_name">Battery and performance</string>
  <string name="avg_current">%d mA</string>
  <string name="avg_current_title">Average Current:</string>
  <string name="base_info">Base info</string>
  <string name="checking_intranet">Checking intranet connection…</string>
  <string name="clear_temperature">End temp</string>
  <string name="cloud_addr_info">Cloud info</string>
  <string name="cloud_allow_change_addr">Change auto cloud sync status</string>
  <string name="cloud_china_addr">Update Chinese server data</string>
  <string name="cloud_international_addr">Update international server data</string>
  <string name="cloud_russion_addr">Update Russion server data</string>
  <string name="cloud_staging_addr">Update staging server data</string>
  <string name="confirm">OK</string>
  <string name="connect_intranet_hint">Connect to the intranet</string>
  <string name="current_allow_sync_is">Cloud auto update:</string>
  <string name="current_cloud_addr_is">Cloud control server address is:</string>
  <string name="delete_data_confirm">Delete this item now?</string>
  <string name="disable">disabled</string>
  <string name="enable">enabled</string>
  <string name="enable_sleep_mode">Turn on Sleep mode to optimize battery usage at night</string>
  <string name="failure">Error</string>
  <string name="high_temp_benchmark_state">Overheating</string>
  <string name="high_temp_benchmark_state_message">Looks like this device is too hot now. Use this app after the device cools down: </string>
  <string name="high_temp_state">Overheating</string>
  <string name="high_temp_state_message">Your device is overheating. Mobile data, WLAN hotspots, GPS, and camera will be restricted.</string>
  <string name="high_temp_state_message_orange_es">To improve device performance, some apps have been temporarily disabled.</string>
  <string name="insert_data">Insert data</string>
  <string name="kill_all_back_pro_toast_message">Your device is overheated. Closed all apps running in the background for now.</string>
  <string name="kill_pkg_toast_message">Can't use apps due to device overheating</string>
  <string name="kill_some_back_pro_toast_message">Your device is overheated. Closed some apps running in the background for now.</string>
  <string name="lasttime_applist_cloud">Updated apps:</string>
  <string name="lasttime_feature_cloud">Updated features:</string>
  <string name="modify_data">Modify data</string>
  <string name="power_consume_abnormal_night">Battery is drained at night</string>
  <string name="privacy">Privacy Policy</string>
  <string name="save_data">Save data</string>
  <string name="screen_off_current">Screen off DC</string>
  <string name="screen_on_current">Screen on DC</string>
  <string name="search_input_txt_na">&lt;font color='#ff0000'&gt;%s&lt;/font&gt;</string>
  <string name="search_result_text">Couldn't find any apps</string>
  <string name="softbank_high_temp_toast_time_10min">Turned off flashlight to avoid overheating</string>
  <string name="softbank_high_temp_toast_time_4min">Turned off flash to avoid overheating</string>
  <string name="stricter_high_temp_state_message">Looks like this device is overheated. You'll only be able to use Phone and Contacts for now.</string>
  <string name="sucess">Done</string>
  <string name="thermal_cancel">Cancel</string>
  <string name="thermal_confirm">OK</string>
  <string name="trig_temperature">Start temp</string>
  <string name="update_profile_failture_not_connect_wifi">Couldn't update. Connect to WLAN and try again.</string>
  <string name="update_profile_sucess">Updated from server sucessfully</string>
</resources>