<?xml version='1.0' encoding='utf-8' ?>
<RelativeLayout android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
  <TextView android:textSize="16.0dp"
            android:textStyle="bold"
            android:id="@id/tv_base_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80.0dp"
            android:text="@string/base_info"
            android:layout_centerHorizontal="true" />
  <TextView android:textSize="14.0dp"
            android:textColor="#999999"
            android:id="@id/tv_feature_update_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dp"
            android:text="@string/lasttime_feature_cloud"
            android:layout_below="@id/tv_base_info"
            android:layout_centerHorizontal="true" />
  <TextView android:textSize="14.0dp"
            android:textColor="#999999"
            android:id="@id/tv_applist_update_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dp"
            android:text="@string/lasttime_applist_cloud"
            android:layout_below="@id/tv_feature_update_time"
            android:layout_centerHorizontal="true" />
  <TextView android:textSize="14.0dp"
            android:textColor="#999999"
            android:id="@id/tv_current_cloud_addr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dp"
            android:text="@string/current_cloud_addr_is"
            android:layout_below="@id/tv_applist_update_time"
            android:layout_centerHorizontal="true" />
  <TextView android:textSize="14.0dp"
            android:textColor="#999999"
            android:id="@id/tv_current_allow_sync_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dp"
            android:text="@string/current_allow_sync_is"
            android:layout_below="@id/tv_current_cloud_addr"
            android:layout_centerHorizontal="true" />
  <LinearLayout android:gravity="center"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.0dp"
                android:layout_below="@id/tv_current_allow_sync_status"
                android:layout_centerInParent="true">
    <TextView android:textSize="16.0dp"
              android:id="@id/btn_cloud_change_addr"
              android:background="@drawable/round_corner"
              android:padding="10.0dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="20.0dp"
              android:text="@string/cloud_allow_change_addr" />
    <TextView android:textSize="16.0dp"
              android:id="@id/btn_online_addr"
              android:background="@drawable/round_corner"
              android:padding="10.0dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="20.0dp"
              android:text="@string/cloud_china_addr" />
    <TextView android:textSize="16.0dp"
              android:id="@id/btn_staging_addr"
              android:background="@drawable/round_corner"
              android:padding="10.0dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="20.0dp"
              android:text="@string/cloud_staging_addr" />
    <TextView android:textSize="16.0dp"
              android:id="@id/btn_international_addr"
              android:background="@drawable/round_corner"
              android:padding="10.0dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="20.0dp"
              android:text="@string/cloud_international_addr" />
    <TextView android:textSize="16.0dp"
              android:id="@id/btn_russion_addr"
              android:background="@drawable/round_corner"
              android:padding="10.0dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="20.0dp"
              android:text="@string/cloud_russion_addr" />
  </LinearLayout>
</RelativeLayout>